Consulta campus, recupera maestro, edita maestro, y añade evento
Solo falta que los eventos se muestren en el calendario del maestro visualmente